# vfs

./: CMakeLists.txt  VirtualFS.sln
BlockFSAddFile/: BlockFSAddFile.vcxproj  CMakeLists.txt  main.cpp
BlockFSCreate/: BlockFSCreate.vcxproj  CMakeLists.txt  main.cpp
BlockFSPackDirectory/: BlockFSPackDirectory.vcxproj  CMakeLists.txt  main.cpp
BlockFSRemove/: BlockFSRemove.vcxproj  CMakeLists.txt  main.cpp
BlockFSUnpackDirectory/: BlockFSUnpackDirectory.vcxproj  CMakeLists.txt  main.cpp
BlockManagerAddRemove/: BlockManagerAddRemove.vcxproj  CMakeLists.txt  main.cpp  test.pkg
BlockManagerCreate/: BlockManagerCreate.vcxproj  CMakeLists.txt  main.cpp  test.pkg
DiskFileCreateTest/: CMakeLists.txt  DiskFileCreateTest.vcxproj  main.cpp
DiskFileRWSTest/: CMakeLists.txt  DiskFileRWSTest.vcxproj  main.cpp
DiskFileReadTest/: CMakeLists.txt  DiskFileReadTest.vcxproj  main.cpp
Downloader/: CMakeLists.txt  downloadmanager.cpp  downloadmanager.h  hashchecker.cpp  hashchecker.h  main.cpp  updatemanager.cpp  updatemanager.h
HashSetGenerator/: CMakeLists.txt  HashSetGenerator.vcxproj  main.cpp
MD5Test/: CMakeLists.txt  MD5Test.vcxproj  Main.cpp
Md5Utils/: CMakeLists.txt  Md5Utils.cpp  Md5Utils.h  Md5Utils.vcxproj  Md5Utils.vcxproj.filters
PackDirectory/: CMakeLists.txt  PackDirectory.vcxproj  main.cpp
PatchCreator/: CMakeLists.txt
PatchLib/: CMakeLists.txt  PatchLib.cpp  PatchLib.h
Patcher/: CMakeLists.txt  HashSetGenerator.vcxproj
VFS/: BlockFS.cpp  BlockFS.h  BlockManager.cpp  BlockManager.h  CMakeLists.txt  DiskFile.cpp  DiskFile.h  FileLock.cpp  FileLock.h  GUtMd5.cpp  GUtMd5.h  GUtMd5Config.h  IFile.cpp  IFile.h  PackedFile.cpp  PackedFile.h  UnpackedFile.cpp  UnpackedFile.h  VFS.cpp  VFS.h  VFS.vcxproj  VFS.vcxproj.filters
ZlibTest/: CMakeLists.txt  ZlibTest.vcxproj  input.txt  main.cpp  output.txt
zlib/: CMakeLists.txt  adler32.c  compress.c  crc32.c  crypt.h  deflate.c  gzio.c  infback.c  inffast.c  inflate.c  inftrees.c  ioapi.c  ioapi.h  trees.c  uncompr.c  unzip.c  zip.c  zlib.vcxproj  zlib.vcxproj.filters  zutil.c
